# Turbovec_RAG_Ollama_Gemm2

./: README.md  app_3.py  pyproject.toml  requirements.txt
data/: Quantum_Computing_Overview.txt
