[project]
name = "turbovec-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "sentence-transformers>=5.6.0",
    "turbovec>=0.8.0",
]
